hphp/test/zend/good/ext-standard-strings/bug22207.php
<?php
	printf("%10.5e\n", 1.1); 
	var_dump(sprintf("%10.5e\n", 1.1));
?>