hphp/test/zend/bad/zend/bug48930.php
#!php
<?php

/*
 * Test
 */
printf("__COMPILER_HALT_OFFSET__ is %d\n",__COMPILER_HALT_OFFSET__);

__halt_compiler();

?>